@@ -116,36 +116,18 @@ class ATSchemaField(ArchetypeSubTemplate):
     marker_name = "Your Archetypes field definitions here ..."
 
     vars = [
-        var('welcome',
-            '\n\nWelcome to the handy AT Schema maker, we hope you like it! Crtain things are implied: i.e. Field Type should be String, not StringField.  We do the work for you!',
-            default='True'),
         var('content_class_filename',
             '\n\nWhat is the module (file)name of your content class? (.py is implied)\n',
             default='exampletype'),
-        var('field_type',
-            '\n\nWhat kind of field should I make for you?\n',
-            default='String'),
         var('field_name',
             '\n\nWhat would you like to name this field?\n',
             default='field'),
+        var('field_type',
+            '\n\nWhat kind of field should I make for you?\n',
+            default='String'),
         var('widget_type',
             '\n\nWhat kind of widget do you want to use?\n',
             default='String'),
-        var('field_label',
-            '\n\nWhat should be the label of this field (title)?\n',
-            default='New Field'),
-        var('field_desc',
-            '\n\nWhat should be the description of this field (help text)?\n',
-            default='Field description'),
-        var('i18n_domain',
-            '\n\nWhat is the product name/i18n domain?\n',
-            default='myProduct'),
-        var('required',
-            '\n\nIs this field required?\n',
-            default='False'),
-        var('default',
-            "\n\nIf you'd like a default type it here, otherwise leave it blank\n",
-            default=''),
         ]
 
     def pre(self, command, output_dir, vars):
